test/conformance/chainsaw/deleting-policies/cel-lib/globalcontext-lib/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: test-globalcontext-apicall-correct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: nginx
          image: public.ecr.aws/docker/library/nginx
