test/conformance/chainsaw/deleting-policies/cel-lib/globalcontext-lib/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-globalcontext-apicall-correct
