test/conformance/chainsaw/deleting-policies/cel-lib/globalcontext-lib/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: DeletingPolicy
metadata:
  name: delete-if-deployment-exists
spec:
  schedule: "*/1 * * * *"
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
  conditions:
    - name: require-deployment
      expression: globalContext.get("gctxentry-apicall-correct", "") != 0
